--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
         <div>
-            <img src="images\rishu.png" alt="profile-pic" width="180px">
+            <img src="images\Rishu.png" alt="profile-pic" width="180px">
             <h1>Hello.</h1>
             <p class="intro">I'm a web designer based in Chennai, India. I have a passion for web design and love to create for web and mobile
                 devices.</p>
